feat: add Excel & PDF export functionality for products
